libraries/ecc100j/lib/ecc100/ecc.h

typedef int Bln32;                              /**< Boolean compatible to older C      */
typedef int Int32;                              /**< Basic type                         */
/** @brief Output deactivate on EOT
 *
 *  Defines the behavior of the output on EOT. If enabled, the output of the axis will be deactivated on positive EOT detection.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        true:  Output will be deactiveted on EOT.
                          false: Output stays active on EOT
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlEotOutputDeactive( Int32 deviceHandle,
                                            Int32 axis,
                                            Bln32* enable,
                                            Bln32 set);
/** @brief Fixed output voltage
 *
 *  Controls the DC level on the output.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  voltage       Output voltage in µV
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlFixOutputVoltage( Int32 deviceHandle,
                                           Int32 axis,
                                           Int32* voltage,
                                           Bln32 set);
/** @brief Trigger input enable
 *
 *  Controls the input trigger for steps.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        true:  External trigger enabled
 *                        false: External trigger disabled
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlExtTrigger( Int32 deviceHandle,
                                     Int32 axis,
                                     Bln32* enable,
                                     Bln32 set);
/** @brief AQuadB input enable
 *
 *  Controls the AQuadB input for setpoint parameter.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        true:  AQuadB input enabled
 *                        false: AQuadB input disabled
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlAQuadBIn( Int32 deviceHandle,
                                   Int32 axis,
                                   Bln32* enable,
                                   Bln32 set);
/** @brief AQuadB input resolution
 *
 *  Controls the AQuadB input resolution for setpoint parameter.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  resolution    resolution in nm
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlAQuadBInResolution( Int32 deviceHandle,
                                             Int32 axis,
                                             Int32* resolution,
                                             Bln32 set);
/** @brief AQuadB output enable
 *
 *  Controls the AQuadB output for position indication.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        true:  AQuadB output enabled
 *                        false: AQuadB output disabled
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlAQuadBOut( Int32 deviceHandle,
                                    Int32 axis,
                                    Bln32* enable,
                                    Bln32 set);
/** @brief AQuadB output resolution
 *
 *  Controls the AQuadB output resolution for position indication.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  resolution    resolution in nm
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlAQuadBOutResolution( Int32 deviceHandle,
                                              Int32 axis,
                                              Int32* resolution,
                                              Bln32 set);