ecc100j/src/ecc100/bindings/EccLibrary.java


  /**
   * @brief Output deactivate on EOT<br>
   *        <br>
   *        Defines the behavior of the output on EOT. If enabled, the output of
   *        the axis will be deactivated on positive EOT detection.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          true: Output will be deactiveted on EOT.<br>
   *          false: Output stays active on EOT<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlEotOutputDeactive(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:623</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlEotOutputDeactive(int deviceHandle,
                                                 int axis,
                                                 Pointer<Integer> enable,
                                                 int set)
  {
    return ECC_controlEotOutputDeactive(deviceHandle,
                                        axis,
                                        Pointer.getPeer(enable),
                                        set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlEotOutputDeactive(int deviceHandle,
                                                           int axis,
                                                           @Ptr long enable,
                                                           int set);

  /**
   * @brief Fixed output voltage<br>
   *        <br>
   *        Controls the DC level on the output.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param voltage
   *          Output voltage in \u00b5V<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlFixOutputVoltage(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:642</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlFixOutputVoltage(int deviceHandle,
                                                int axis,
                                                Pointer<Integer> voltage,
                                                int set)
  {
    return ECC_controlFixOutputVoltage(deviceHandle,
                                       axis,
                                       Pointer.getPeer(voltage),
                                       set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlFixOutputVoltage(int deviceHandle,
                                                          int axis,
                                                          @Ptr long voltage,
                                                          int set);

  /**
   * @brief Trigger input enable<br>
   *        <br>
   *        Controls the input trigger for steps.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          true: External trigger enabled<br>
   *          false: External trigger disabled<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlExtTrigger(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:661</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlExtTrigger(int deviceHandle,
                                          int axis,
                                          Pointer<Integer> enable,
                                          int set)
  {
    return ECC_controlExtTrigger(deviceHandle,
                                 axis,
                                 Pointer.getPeer(enable),
                                 set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlExtTrigger(int deviceHandle,
                                                    int axis,
                                                    @Ptr long enable,
                                                    int set);

  /**
   * @brief AQuadB input enable<br>
   *        <br>
   *        Controls the AQuadB input for setpoint parameter.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          true: AQuadB input enabled<br>
   *          false: AQuadB input disabled<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlAQuadBIn(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:680</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlAQuadBIn(int deviceHandle,
                                        int axis,
                                        Pointer<Integer> enable,
                                        int set)
  {
    return ECC_controlAQuadBIn(deviceHandle,
                               axis,
                               Pointer.getPeer(enable),
                               set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlAQuadBIn(int deviceHandle,
                                                  int axis,
                                                  @Ptr long enable,
                                                  int set);

  /**
   * @brief AQuadB input resolution<br>
   *        <br>
   *        Controls the AQuadB input resolution for setpoint parameter.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param resolution
   *          resolution in nm<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlAQuadBInResolution(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:696</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlAQuadBInResolution(int deviceHandle,
                                                  int axis,
                                                  Pointer<Integer> resolution,
                                                  int set)
  {
    return ECC_controlAQuadBInResolution(deviceHandle,
                                         axis,
                                         Pointer.getPeer(resolution),
                                         set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlAQuadBInResolution(int deviceHandle,
                                                            int axis,
                                                            @Ptr long resolution,
                                                            int set);

  /**
   * @brief AQuadB output enable<br>
   *        <br>
   *        Controls the AQuadB output for position indication.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          true: AQuadB output enabled<br>
   *          false: AQuadB output disabled<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlAQuadBOut(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:714</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlAQuadBOut(int deviceHandle,
                                         int axis,
                                         Pointer<Integer> enable,
                                         int set)
  {
    return ECC_controlAQuadBOut(deviceHandle,
                                axis,
                                Pointer.getPeer(enable),
                                set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlAQuadBOut(int deviceHandle,
                                                   int axis,
                                                   @Ptr long enable,
                                                   int set);

  /**
   * @brief AQuadB output resolution<br>
   *        <br>
   *        Controls the AQuadB output resolution for position indication.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param resolution
   *          resolution in nm<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlAQuadBOutResolution(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:730</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlAQuadBOutResolution(int deviceHandle,
                                                   int axis,
                                                   Pointer<Integer> resolution,
                                                   int set)
  {
    return ECC_controlAQuadBOutResolution(deviceHandle,
                                          axis,
                                          Pointer.getPeer(resolution),
                                          set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlAQuadBOutResolution(int deviceHandle,
                                                             int axis,
                                                             @Ptr long resolution,
                                                             int set);
